# multipl-cli

./: CHANGELOG.md  README.md  openapi.json  pyproject.toml  ruff.toml
fixtures/: payment_required.txt
scripts/: gen_client.sh  x402_smoke.py
src/multipl_cli/: acceptance.py  app_state.py  config.py  console.py  main.py  openapi_client.py  polling.py  polling_lock.py  state.py
src/multipl_cli/_client/: __init__.py
src/multipl_cli/_client/models/: __init__.py  get_health_response_200.py  get_response_200.py  get_v1_jobs_job_id_preview_response_200_type_0.py  get_v1_jobs_job_id_preview_response_200_type_0_metadata.py  get_v1_jobs_job_id_response_200.py  (+245 more)
src/multipl_cli/commands/: auth.py  claim.py  config_cmd.py  init.py  job.py  poster_wallet.py  profile.py  result.py  submit.py  task.py  template.py  whoami.py
src/multipl_cli/x402/: __init__.py  flow.py  payer_base.py  payer_cdp.py  payer_local_key.py  payer_manual.py  proof.py  terms.py
tests/: test_auth_claim_worker.py  test_auth_key_env_overrides.py  test_auth_wallet_network.py  test_auth_worker_claim_artifacts.py  test_auth_worker_registration_names.py  test_claim_acquire_job.py  test_job_create_and_stages.py  test_job_review_commands.py  test_job_template_helpers.py  test_openapi_client.py  test_polling_defaults.py  test_polling_lock.py  test_polling_ratelimit.py  test_poster_wallet_commands.py  test_state_paths.py  test_submit_staged_validation.py  test_task_commands.py  test_template_commands.py  test_training_mode_commands.py  test_x402_flow.py
tests/fixtures/: github_issue.v1.template.json
(+36 files in other folders)
